2010-06-18  Dan Bernstein  <mitz@apple.com>

        Reviewed by Anders Carlsson.

        REGRESSION (r61379?): Assertion failure in Element::getURLAttribute() when accessing the src attribute of a script element
        https://bugs.webkit.org/show_bug.cgi?id=40831

        * fast/dom/HTMLScriptElement/isURLAttribute-expected.txt: Added.
        * fast/dom/HTMLScriptElement/isURLAttribute.html: Added.

2010-06-18  Dimitri Glazkov  <dglazkov@chromium.org>

        Unreviewed, expectations update.

        New baselines after http://trac.webkit.org/changeset/61393.

2010-06-18  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r61405.
        http://trac.webkit.org/changeset/61405
        https://bugs.webkit.org/show_bug.cgi?id=40838

        broke chromium mac compile (Requested by tonyg-cr1 on
        #webkit).

        * fast/js/parser-high-byte-character-expected.txt: Removed.
        * fast/js/parser-high-byte-character.html: Removed.
        * fast/js/script-tests/parser-high-byte-character.js: Removed.

2010-06-18  Zhenyao Mo  <zmo@google.com>

        Reviewed by Dimitri Glazkov.

        Fix WebGLRenderingContext helper functions find{Texture/Renderbuffer/Buffer}
        https://bugs.webkit.org/show_bug.cgi?id=40176

        * fast/canvas/webgl/gl-object-get-calls-expected.txt: Test name == 0 cases, and test getVertexAttrib return original WebGLBuffer object.
        * fast/canvas/webgl/script-tests/gl-object-get-calls.js: Ditto.

2010-06-18  Tony Gentilcore  <tonyg@chromium.org>

        Reviewed by David Levin.

        Persist V8's ScriptData to the memory cache.
        https://bugs.webkit.org/show_bug.cgi?id=38661

        When V8 ScriptData caching was originally submitted it causes crashes
        in external scripts with high-byte characters. This new test crashes on
        the original code, but now passes.

        * fast/js/parser-high-byte-character-expected.txt: Added.