@@ -1,3 +1,13 @@
+2010-06-18  Alexey Proskuryakov  <ap@apple.com>
+
+        Reviewed by Darin Adler.
+
+        https://bugs.webkit.org/show_bug.cgi?id=40803
+        TestNetscapePlugin has an incorrect implementation of "property" property
+
+        * DumpRenderTree/TestNetscapePlugIn.subproj/PluginObject.cpp: (pluginGetProperty): Don't
+        pass a static string back, it's going to be released by NPAPI implementation.
+
 2010-06-18  Leandro Pereira  <leandro@profusion.mobi>
 
         Unreviewed.
